Super actualización Settings new UI Interface
Super actualización Settings new UI Interface

--- a/src/main/webapp/script/area/Create.xhtml
+++ b/src/main/webapp/script/area/Create.xhtml
@@ -27,7 +27,7 @@
             <div class="page-header">
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
-                        <h1><i class="fa fa-building page-header-icon"></i>&nbsp;&nbsp;#{bundle.CreateAreaTitle}</h1>
+                        <h1><i style="font-size: small;" class="fa fa-plus"/> <i class="fa fa-building page-header-icon"></i>&nbsp;&nbsp;#{bundle.CreateAreaTitle}</h1>
                         <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
                             <i class="fa fa-info-circle"/>
                         </p:commandLink> 
@@ -77,14 +77,28 @@
                         </div>
                     </div>
                 </div>
-                <p:toolbar>  
-                    <p:toolbarGroup align="left">
-                        <p:commandLink styleClass="btn btn-default btn-flat fa fa-reply" action="#{areaController.prepareList}" value="&nbsp;&nbsp;Volver" immediate="true" ajax="false"/>
-                        <p:separator/>
-                        <p:commandLink styleClass="btn btn-primary btn-flat fa fa-save" action="#{areaController.create}" value="&nbsp;&nbsp;#{bundle.CreateAreaSaveLink}" ajax="false"/> 
-                    </p:toolbarGroup>
-                </p:toolbar>
 
+                <div class="btn-group">
+                    <p:commandLink action="#{areaController.prepareList}" 
+                                   styleClass="btn btn-default btn-flat" 
+                                   ajax="false" immediate="true"
+                                   onclick="jQuery(this).addClass('ui-state-disabled');
+                                           jQuery(this).children().removeClass('fa fa-chevron-left');
+                                           jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                        <i class="fa fa-chevron-left"></i> Volver
+                    </p:commandLink>
+                </div>
+                &nbsp;
+                <div class="btn-group">
+                    <p:commandLink action="#{areaController.create}" 
+                                   ajax="false" update="@form"
+                                   styleClass="btn btn-primary btn-flat" 
+                                   onclick="jQuery(this).addClass('ui-state-disabled');
+                                           jQuery(this).children().removeClass('fa fa-save');
+                                           jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                        <i class="fa fa-save"></i> #{bundle.CreateAreaSaveLink}
+                    </p:commandLink>
+                </div>
 
             </h:form>
         </ui:define>
