--- a/src/main/webapp/script/grupo/List.xhtml
+++ b/src/main/webapp/script/grupo/List.xhtml
@@ -28,7 +28,7 @@
             <div class="page-header">
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
-                        <h1><i class="fa fa-key page-header-icon"></i>&nbsp;&nbsp;Grupos</h1>
+                        <h1><i class="fa fa-users page-header-icon"></i>&nbsp;&nbsp;Grupos</h1>
                         <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
                             <i class="fa fa-info-circle"/>
                         </p:commandLink> 
