--- a/src/main/webapp/script/grupo/Edit.xhtml
+++ b/src/main/webapp/script/grupo/Edit.xhtml
@@ -27,7 +27,7 @@
             <div class="page-header">
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
-                        <h1><i class="fa fa-key page-header-icon"></i>&nbsp;&nbsp;#{bundle.EditGrupoTitle}</h1>
+                        <h1><i class="fa fa-users page-header-icon"></i>&nbsp;&nbsp;#{bundle.EditGrupoTitle}: #{grupoController.selected.idGrupo}</h1>
                         <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
                             <i class="fa fa-info-circle"/>
                         </p:commandLink> 
@@ -127,23 +127,42 @@
 
                 <br/>
 
-                <p:toolbar>  
-                    <p:toolbarGroup align="left">   
-                        <p:commandLink styleClass="btn btn-default btn-flat fa fa-reply" ajax="false" action="#{grupoController.goBack()}" value="&nbsp;&nbsp;#{bundle.goBack}" immediate="true"/>
 
-                        <p:separator/>
-
-                        <p:commandLink styleClass="btn btn-primary btn-flat fa fa-eye" ajax="false" action="#{grupoController.prepareView()}" value="&nbsp;&nbsp;Ver"/>
-
-                        <p:separator/>
-
-                        <p:commandLink styleClass="btn btn-primary btn-flat fa fa-save" ajax="false" action="#{grupoController.update}" value="&nbsp;&nbsp;#{bundle.EditGrupoSaveLink}" 
-                                       rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"/>
-
-                    </p:toolbarGroup>
-                </p:toolbar>
-
-
+                <div class="btn-group">
+                    <p:commandLink styleClass="btn btn-default btn-flat" 
+                                   action="#{grupoController.prepareList}"  
+                                   ajax="false"
+                                   immediate="true"
+                                   onclick="jQuery(this).addClass('ui-state-disabled');
+                                           jQuery(this).children().removeClass('fa fa-chevron-left');
+                                           jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                        <i class="fa fa-chevron-left"></i> Volver
+                    </p:commandLink>  
+                </div>
+                &nbsp;
+                <div class="btn-group">
+                    <p:commandLink styleClass="btn btn-primary btn-flat" 
+                                   action="#{grupoController.prepareView()}"  
+                                   ajax="false"
+                                   onclick="jQuery(this).addClass('ui-state-disabled');
+                                           jQuery(this).children().removeClass('fa fa-eye');
+                                           jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                        <i class="fa fa-eye"></i> Ver
+                    </p:commandLink>  
+                </div>
+                &nbsp;
+                <div class="btn-group">
+                    <p:commandLink styleClass="btn btn-primary btn-flat" 
+                                   action="#{grupoController.update}"  
+                                   ajax="false" 
+                                   rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"
+                                   onclick="jQuery(this).addClass('ui-state-disabled');
+                                           jQuery(this).children().removeClass('fa fa-save');
+                                           jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                        <i class="fa fa-save"></i> #{bundle.EditGrupoSaveLink}
+                    </p:commandLink>  
+                </div>
+                
                 <p:dialog id="confirmDialog" showEffect="fade" hideEffect="fade" 
                           header="Iniciando proceso de eliminación" widgetVar="confirmation">
 
