--- a/src/main/webapp/script/rol/Create.xhtml
+++ b/src/main/webapp/script/rol/Create.xhtml
@@ -25,7 +25,7 @@
             <div class="page-header">
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
-                        <h1><i class="fa fa-key page-header-icon"></i>&nbsp;&nbsp;#{bundle.CreateRolTitle}</h1>
+                        <h1><i style="font-size: small;" class="fa fa-plus"/> <i class="fa fa-key page-header-icon"></i>&nbsp;&nbsp;#{bundle.CreateRolTitle}</h1>
                         <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
                             <i class="fa fa-info-circle"/>
                         </p:commandLink> 
@@ -71,9 +71,28 @@
                     </div>
                 </div>
 
-                <p:commandLink styleClass="btn btn-default btn-flat fa fa-reply" action="#{rolController.prepareList}" value="&nbsp;&nbsp;Volver" immediate="true" ajax="false"/>
-                &nbsp;&nbsp;
-                <p:commandLink styleClass="btn btn-primary btn-flat fa fa-save" action="#{rolController.create}" value="&nbsp;&nbsp;#{bundle.CreateRolSaveLink}" ajax="false" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"/>                     
+                <div class="btn-group">
+                    <p:commandLink action="#{rolController.prepareList}" 
+                                   styleClass="btn btn-default btn-flat" 
+                                   ajax="false" immediate="true"
+                                   onclick="jQuery(this).addClass('ui-state-disabled');
+                                           jQuery(this).children().removeClass('fa fa-chevron-left');
+                                           jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                        <i class="fa fa-chevron-left"></i> Volver
+                    </p:commandLink>
+                </div>
+                &nbsp;
+                <div class="btn-group">
+                    <p:commandLink action="#{rolController.create}" 
+                                   ajax="false"
+                                   styleClass="btn btn-primary btn-flat" 
+                                   rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"
+                                   onclick="jQuery(this).addClass('ui-state-disabled');
+                                           jQuery(this).children().removeClass('fa fa-save');
+                                           jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                        <i class="fa fa-save"></i> #{bundle.CreateRolSaveLink}
+                    </p:commandLink>
+                </div>
             </h:form>
         </ui:define>
     </ui:composition>
