--- a/src/main/webapp/script/rol/View.xhtml
+++ b/src/main/webapp/script/rol/View.xhtml
@@ -81,9 +81,30 @@
                 </p:outputPanel>
 
                 <div style="margin-top: 15px;">
-                    <p:commandLink styleClass="btn btn-default btn-flat fa fa-reply" ajax="false" action="#{rolController.prepareList}" value="&nbsp;&nbsp;Volver"/>
-                    &nbsp;&nbsp;
-                    <p:commandLink styleClass="btn btn-primary btn-flat fa fa-pencil" ajax="false" action="Edit" disabled="#{not rolController.puedeEditar(rolController.selected)}" value="&nbsp;&nbsp;#{bundle.ViewRolEditLink}"/>
+
+                    <div class="btn-group">
+                        <p:commandLink action="#{rolController.prepareList}" 
+                                       styleClass="btn btn-default btn-flat" 
+                                       ajax="false" immediate="true"
+                                       onclick="jQuery(this).addClass('ui-state-disabled');
+                                               jQuery(this).children().removeClass('fa fa-chevron-left');
+                                               jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                            <i class="fa fa-chevron-left"></i> Volver
+                        </p:commandLink>
+                    </div>
+                    &nbsp;
+                    <div class="btn-group">
+                        <p:commandLink action="Edit" 
+                                       ajax="false"
+                                       styleClass="btn btn-primary btn-flat" 
+                                       disabled="#{not rolController.puedeEditar(rolController.selected)}"
+                                       onclick="jQuery(this).addClass('ui-state-disabled');
+                                               jQuery(this).children().removeClass('fa fa-pencil');
+                                               jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                            <i class="fa fa-pencil"></i> #{bundle.ViewRolEditLink}
+                        </p:commandLink>
+                    </div>
+
                 </div>
             </h:form>
         </ui:define>
