--- a/src/main/webapp/script/tipoCaso/Create.xhtml
+++ b/src/main/webapp/script/tipoCaso/Create.xhtml
@@ -70,7 +70,7 @@
                             <h:inputTextarea styleClass="form-control" id="descripcion" value="#{tipoCasoController.selected.descripcion}" rows="6"  cols="50" />
                         </div>
 
-                        
+
                     </div>
 
                     <div class="col-sm-9 col-lg-9">
@@ -113,7 +113,7 @@
                                                   style="background: \##{item.backgroundColor}; color: \##{item.fontColor};" 
                                                   value="#{item.nombre}"/> 
                                 </p:column>
-                                
+
                                 <p:column headerText="Acción">
 
                                     <p:commandLink update="SubEstadoCaso_Table" 
@@ -184,8 +184,9 @@
                                            styleClass="btn btn-default btn-flat" 
                                            ajax="false" immediate="true"
                                            onclick="jQuery(this).addClass('ui-state-disabled');
+                                               jQuery(this).children().removeClass('fa fa-chevron-left');
                                                    jQuery(this).children().addClass('fa fa-refresh fa-spin')">
-                                <i class=""></i> #{bundle.Cancel}
+                                <i class="fa fa-chevron-left"></i> #{bundle.goBack}
                             </p:commandLink>
                         </div>
 
@@ -194,8 +195,9 @@
                                            ajax="false"
                                            styleClass="btn btn-primary btn-flat" 
                                            onclick="jQuery(this).addClass('ui-state-disabled');
+                                                   jQuery(this).children().removeClass('fa fa-save');
                                                    jQuery(this).children().addClass('fa fa-refresh fa-spin')">
-                                <i class=""></i> #{bundle.SaveLink}
+                                <i class="fa fa-save"></i> #{bundle.SaveLink}
                             </p:commandLink>
                         </div>
                     </div>
