--- a/src/main/webapp/script/usuario/Create.xhtml
+++ b/src/main/webapp/script/usuario/Create.xhtml
@@ -11,7 +11,7 @@
             <h:outputText value="#{bundle.CreateUsuarioTitle}"></h:outputText>
         </ui:define>
         <ui:define name="help">
-            <h:outputText escape="false" value="Areas"/>
+            <h:outputText escape="false" value="#{bundle.ayudaUsuarios}"/>
         </ui:define>
 
         <ui:define name="content_header">
@@ -25,8 +25,8 @@
             <div class="page-header">
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
-                        <h1><i style="font-size: small;" class="fa fa-plus"/><i class="fa fa-user page-header-icon"></i>&nbsp;&nbsp;#{bundle.CreateUsuarioTitle}</h1>
-                        <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
+                        <h1><i style="font-size: small;" class="fa fa-plus"/> <i class="fa fa-user page-header-icon"></i>&nbsp;&nbsp;#{bundle.CreateUsuarioTitle}</h1>
+                        <p:commandLink title="Ayuda Usuarios" onclick="PF('helpDialog').show()" styleClass="text-info" >
                             <i class="fa fa-info-circle"/>
                         </p:commandLink> 
                     </div>
@@ -169,23 +169,30 @@
                 </p:fieldset>
 
                 <br/>
-                <p:toolbar>  
-                    <p:toolbarGroup align="left">   
-                        <p:commandLink styleClass="btn btn-default btn-flat fa fa-reply" action="#{usuarioController.prepareList}" value="&nbsp;&nbsp;#{bundle.goBack}" 
-                                         rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" immediate="true" ajax="false"/>
-                        <p:separator/> 
-                        <p:commandLink styleClass="btn btn-primary btn-flat fa fa-save" action="#{usuarioController.create}" value="&nbsp;&nbsp;#{bundle.CreateUsuarioSaveLink}" 
-                                         ajax="false" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"
-                                         />
 
-
-
-                    </p:toolbarGroup>
-                </p:toolbar>
-
-
-
-
+                <div class="btn-group">
+                    <p:commandLink action="#{usuarioController.prepareList}" 
+                                   styleClass="btn btn-default btn-flat" 
+                                   ajax="false" immediate="true"
+                                   rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"
+                                   onclick="jQuery(this).addClass('ui-state-disabled');
+                                           jQuery(this).children().removeClass('fa fa-chevron-left');
+                                           jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                        <i class="fa fa-chevron-left"></i> #{bundle.goBack}
+                    </p:commandLink>
+                </div>
+                &nbsp;
+                <div class="btn-group">
+                    <p:commandLink action="#{usuarioController.create}" 
+                                   ajax="false"
+                                   styleClass="btn btn-primary btn-flat" 
+                                   rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"
+                                   onclick="jQuery(this).addClass('ui-state-disabled');
+                                           jQuery(this).children().removeClass('fa fa-save');
+                                           jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                        <i class="fa fa-save"></i> #{bundle.CreateUsuarioSaveLink}
+                    </p:commandLink>
+                </div>
 
             </h:form>
         </ui:define>
