--- a/src/main/webapp/script/usuario/List.xhtml
+++ b/src/main/webapp/script/usuario/List.xhtml
@@ -9,23 +9,15 @@
 
     <ui:composition template="/script/template_inbox_bootstrap_config.xhtml">
         <ui:define name="title">
-            <h:outputText value="Usuarios"></h:outputText>
+            <h:outputText value="#{bundle.ListUsuarioTitle}"></h:outputText>
         </ui:define>
         <ui:define name="help">
 
             <h:outputLabel escape="false" value="#{bundle.ayudaUsuarios}"/>
 
         </ui:define>
-
-
         <ui:define name="content_header">
-            <script>
-                var init = [];
-                init.push(function () {
-                    $('body').addClass('mmc');
-                });
-            </script>
-
+            
             <!-- page-header -->
             <div class="page-header">
                 <div class="row">
